--- a/basics/002-controller.html
+++ b/basics/002-controller.html
@@ -10,12 +10,25 @@
           <h2>Welcome <code>{{hello.title}}</code> to the world of Angular JS</h2>
       </div>
       <div class="container">
-         <p>Example <code>ng-repeat</code></p>
-         <ol>
-            <li ng-repeat="country in countries">
-               {{country.name}} : {{country.local}}
-            </li>
-         </ol>
+         <div class="row">
+            <div class="col-md-6">
+               <p>Example <code>ng-repeat</code></p>
+               <ol>
+                  <li ng-repeat="country in countries">
+                     {{country.name}} : {{country.local}}
+                  </li>
+               </ol>
+            </div>
+            <div class="col-md-6">
+               <p>Example <code>ng-repeat</code> in <code>expression</code></p>
+               <ol>
+                  <li ng-repeat="country in countries">
+                     {{country.name + " " + country.local}}
+                  </li>
+               </ol>
+            </div>
+         </div>
+
       </div>
       <script type="text/javascript">
          angular.module('firstApp', [])
